--- a/index.html
+++ b/index.html
@@ -974,16 +974,66 @@ Check out our website to know more or contact us now.
 
                 </div>
                 <div class="container">
+
+
+                      <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
+                <a href="portable-hvls-fan-manufacturer-in-india.html" class="enitre_mouse">
+                    <div class="shadow_effect effect-apollo">
+                        <img src="images/blogs/portable-hvls-fan-manufacturer-in-india (1).png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
+                    </div>
+                </a>
+                <div class="yellow-strip">
+                    <div class="news-time">
+                        <h5>13th</h5>
+                        <span>August
+                        </span>
+                    </div>
+                    <ul class="admin alfa_ul_style">
+                        <li>By : Admin</li>
+                        <li>Comments :34 </li>
+                    </ul>
+                </div>
+                <a href="portable-hvls-fan-manufacturer-in-india.html" class="enitre_mouse">
+                <a href="portable-hvls-fan-manufacturer-in-india.html" class="enitre_mouse">
+                    <h6><a href="what-are-the-benefits-of-vibration-monitoring-for-industrial-fans.html" class="enitre_mouse">Portable HVLS Fan: The Ultimate Cooling Solution</a></h6>            
+            </div>
+
+
+
+                     <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
+                <a href="what-are-the-benefits-of-vibration-monitoring-for-industrial-fans.html" class="enitre_mouse">
+                    <div class="shadow_effect effect-apollo">
+                        <img src="images/blogs/what-are-the-benefits-of-vibration-monitoring-for-industrial-fans (1).png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best Industrial Fan Solutions In India">
+                    </div>
+                </a>
+                <div class="yellow-strip">
+                    <div class="news-time">
+                        <h5>2th</h5>
+                        <span>August
+                        </span>
+                    </div>
+                    <ul class="admin alfa_ul_style">
+                        <li>By : Admin</li>
+                        <li>Comments :34 </li>
+                    </ul>
+                </div>
+                <a href="what-are-the-benefits-of-vibration-monitoring-for-industrial-fans.html" class="enitre_mouse">
+                <a href="what-are-the-benefits-of-vibration-monitoring-for-industrial-fans.html" class="enitre_mouse">
+                    <h6><a href="what-are-the-benefits-of-vibration-monitoring-for-industrial-fans.html" class="enitre_mouse">What Are the Benefits of Vibration Monitoring for Industrial Fans?</a></h6>            
+            </div>
+
+
+
                                         <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
-                        <a href="industrial-fan-solutions-providers" class="enitre_mouse">
+                        <a href="why-proper-ventilation-is-critical-in-commercial-buildings.html" class="enitre_mouse">
                             <div class="shadow_effect effect-apollo">
-                                <img src="images/blogs/best-industrial-fan-manufacturers-globally (1).png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best Industrial Fan Solutions In India">
+                                <img src="images/blogs/why-proper-ventilation-is-critical-in-commercial-buildings.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best Industrial Fan Solutions In India">
                             </div>
                         </a>
                         <div class="yellow-strip">
                             <div class="news-time">
-                                <h5>6th</h5>
-                                <span>May
+                                <h5>23</h5>
+                                <span>July
                                 </span>
                             </div>
                             <ul class="admin alfa_ul_style">
@@ -991,52 +1041,12 @@ Check out our website to know more or contact us now.
                                 <li>Comments :34 </li>
                             </ul>
                         </div>
-                        <a href="best-industrial-fan-manufacturers-globally.html" class="enitre_mouse">
-                        <a href="best-industrial-fan-manufacturers-globally.html" class="enitre_mouse">
-                            <h6><a href="best-industrial-fan-manufacturers-globally.html" class="enitre_mouse">Best Industrial Fan Manufacturer Globally</a></h6>            
+                        <a href="why-proper-ventilation-is-critical-in-commercial-buildings.html" class="enitre_mouse">
+                        <a href="why-proper-ventilation-is-critical-in-commercial-buildings.html" class="enitre_mouse">
+                            <h6><a href="why-proper-ventilation-is-critical-in-commercial-buildings.html" class="enitre_mouse">Why Proper Ventilation Is Critical In Commercial Buildings — And How Alfa Fans Help</a></h6>            
                     </div>
-                    <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
-                        <a href="industrial-fan-solutions-providers" class="enitre_mouse">
-                            <div class="shadow_effect effect-apollo">
-                                <img src="images/blogs/industrial-fan-solutions-providers-2.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best Industrial Fan Solutions In India">
-                            </div>
-                        </a>
-                        <div class="yellow-strip">
-                            <div class="news-time">
-                                <h5>26</h5>
-                                <span>March
-                                </span>
-                            </div>
-                            <ul class="admin alfa_ul_style">
-                                <li>By : Admin</li>
-                                <li>Comments :34 </li>
-                            </ul>
-                        </div>
-                        <a href="industrial-fan-solutions-providers" class="enitre_mouse">
-                        <a href="industrial-fan-solutions-providers" class="enitre_mouse">
-                            <h6><a href="industrial-fan-solutions-providers" class="enitre_mouse">Choosing the Right Industrial Fans : Factors to Consider for Optimal Performance</a></h6>            
-                    </div>
-                    <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
-                        <a href="role-of-industrial-fans-in-maximizing-efficiency-in-industries" class="enitre_mouse">
-                            <div class="shadow_effect effect-apollo">
-                                <img src="images/blogs/role-of-industrial-fans-in-maximizing-efficiency-in-industries-1.png" class="img-responsive zoom_img_effect" alt="Table-Fans-In-India" title="Tips-For-Maximum-Cooling-Of-A-Table-Fan-Durng-Summers">
-                            </div>
-                        </a>
-                        <div class="yellow-strip">
-                            <div class="news-time">
-                                <h5>19</h5>
-                                <span>March
-                                </span>
-                            </div>
-                            <ul class="admin alfa_ul_style">
-                                <li>By : Admin</li>
-                                <li>Comments :34 </li>
-                            </ul>
-                        </div>
-                        <a href="role-of-industrial-fans-in-maximizing-efficiency-in-industries" class="enitre_mouse">
-                        <a href="role-of-industrial-fans-in-maximizing-efficiency-in-industries" class="enitre_mouse">
-                            <h6><a href="role-of-industrial-fans-in-maximizing-efficiency-in-industries" class="enitre_mouse">Maximizing Efficiency: How Industrial Fans Are Transforming Energy Use in Manufacturing</a></h6>            
-                    </div>
+                    
+                   
 
 
                     </div>
