2 new blogs added

--- a/blog.html
+++ b/blog.html
@@ -155,21 +155,62 @@
 
     <div class="container" id="blogContainer">
          <div class="row">
+            <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
+                <a href="optimize-fan-performance-altitude-temperature.html" class="enitre_mouse">
+                    <div class="shadow_effect effect-apollo">
+                        <img src="images/blogs/optimized-fan-perfomance-big-size.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
+                    </div>
+                </a>
+                <div class="yellow-strip">
+                    <div class="news-time">
+                        <h5>09</h5>
+                        <span>September
+                        </span>
+                    </div>
+                    <ul class="admin alfa_ul_style">
+                        <li>By : Admin</li>
+                        <li>Comments :34 </li>
+                    </ul>
+                </div>
+                <a href="optimize-fan-performance-altitude-temperature.html" class="enitre_mouse">
+                <a href="optimize-fan-performance-altitude-temperature.html" class="enitre_mouse">
+                    <h6><a href="optimize-fan-performance-altitude-temperature.html" class="enitre_mouse">Impact of Altitude and Temperature on Fan Performance</a></h6>            
+            </div>
              
-
+<div class="col-md-4 col-sm-4 col-xs-12 news-column ">
+                <a href="best-man-coolers-by-alfa-fans.html" class="enitre_mouse">
+                    <div class="shadow_effect effect-apollo">
+                        <img src="images/blogs/man-cooler-small-size.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
+                    </div>
+                </a>
+                <div class="yellow-strip">
+                    <div class="news-time">
+                        <h5>02</h5>
+                        <span>September
+                        </span>
+                    </div>
+                    <ul class="admin alfa_ul_style">
+                        <li>By : Admin</li>
+                        <li>Comments :34 </li>
+                    </ul>
+                </div>
+                <a href="best-man-coolers-by-alfa-fans.html" class="enitre_mouse">
+                <a href="best-man-coolers-by-alfa-fans.html" class="enitre_mouse">
+                    <h6><a href="best-man-coolers-by-alfa-fans.html" class="enitre_mouse">Best Man Coolers for Workshops, Garages, and Construction Sites</a></h6>            
+            </div>
              
 
 
 
               <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
-                <a href="portable-hvls-fan-manufacturer-in-india.html" class="enitre_mouse">
+                <a href="best-man-coolers-by-alfa-fans.html" class="enitre_mouse">
                     <div class="shadow_effect effect-apollo">
                         <img src="images/blogs/portable-hvls-fan-manufacturer-in-india (1).png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
                     </div>
                 </a>
                 <div class="yellow-strip">
                     <div class="news-time">
-                        <h5>13th</h5>
+                        <h5>13</h5>
                         <span>August
                         </span>
                     </div>
@@ -193,8 +234,9 @@
                 </a>
                 <div class="yellow-strip">
                     <div class="news-time">
-                        <h5>2th</h5>
+                        <h5>2</h5>
                         <span>August
+
                         </span>
                     </div>
                     <ul class="admin alfa_ul_style">
