--- a/sitemap.html
+++ b/sitemap.html
@@ -173,6 +173,13 @@
         <li><a href="blog">●&nbsp;Blogs</a></li>
 
         <li>
+          <a href="optimize-fan-performance-altitude-temperature">&emsp;-&nbsp;Impact of Altitude and Temperature on Fan Performance</a>
+        </li>
+        <li>
+          <a href="best-man-coolers-by-alfa-fans">&emsp;-&nbsp;Best Man Coolers for Workshops, Garages, and Construction Sites</a>
+        </li>
+
+        <li>
           <a href="industrial-fan-solutions-providers">&emsp;-&nbsp;Choosing the Right Industrial Fans : Factors to Consider for Optimal Performance</a>
         </li>
         <li>
