--- a/sitemap.html
+++ b/sitemap.html
@@ -173,6 +173,9 @@
         <li><a href="blog">●&nbsp;Blogs</a></li>
 
         <li>
+          <a href="How-Centrifugal-Blowers-Reducing-Energy-Costs">&emsp;-&nbsp;How High-Efficiency Centrifugal Blowers Are Reducing Energy Costs in 2025</a>
+        </li>
+        <li>
           <a href="optimize-fan-performance-altitude-temperature">&emsp;-&nbsp;Impact of Altitude and Temperature on Fan Performance</a>
         </li>
         <li>
