--- a/blog.html
+++ b/blog.html
@@ -152,11 +152,34 @@
             </ul>
         </div>
     </div>
-
-    <div class="container" id="blogContainer">
+ <div class="container" id="blogContainer">
          <div class="row">
             <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
                 <a href="optimize-fan-performance-altitude-temperature.html" class="enitre_mouse">
+                    <div class="shadow_effect effect-apollo">
+                        <img src="images/blogs/Centrifugal-Blowers-Small- Blog-Image (1).png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
+                    </div>
+                </a>
+                <div class="yellow-strip">
+                    <div class="news-time">
+                        <h5>15</h5>
+                        <span>September
+                        </span>
+                    </div>
+                    <ul class="admin alfa_ul_style">
+                        <li>By : Admin</li>
+                        <li>Comments :34 </li>
+                    </ul>
+                </div>
+                <a href="How-Centrifugal-Blowers-Reducing-Energy-Costs.html" class="enitre_mouse">
+                <a href="How-Centrifugal-Blowers-Reducing-Energy-Costs.html" class="enitre_mouse">
+                    <h6><a href="How-Centrifugal-Blowers-Reducing-Energy-Costs.html" class="enitre_mouse">How High-Efficiency Centrifugal Blowers Are Reducing Energy Costs in 2025</a></h6>            
+            </div>
+    
+    <div class="container" id="blogContainer">
+         <div class="row">
+            <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
+                <a href="How-Centrifugal-Blowers-Reducing-Energy-Costs.html" class="enitre_mouse">
                     <div class="shadow_effect effect-apollo">
                         <img src="images/blogs/optimized-fan-perfomance-big-size.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
                     </div>
