--- a/blog.html
+++ b/blog.html
@@ -152,7 +152,31 @@
             </ul>
         </div>
     </div>
-    
+
+    <div class="container" id="blogContainer">
+         <div class="row">
+            <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
+                <a href="Top-Features-to-Look-When-Buying-Industrial-Fans" class="enitre_mouse">
+                    <div class="shadow_effect effect-apollo">
+                        <img src="images/blogs/industrial-fans small-blog-img.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
+                    </div>
+                </a>
+                <div class="yellow-strip">
+                    <div class="news-time">
+                        <h5>28</h5>
+                        <span>September
+                        </span>
+                    </div>
+                    <ul class="admin alfa_ul_style">
+                        <li>By : Admin</li>
+                        <li>Comments :34 </li>
+                    </ul>
+                </div>
+                <a href="Top-Features-to-Look-When-Buying-Industrial-Fans" class="enitre_mouse">
+                <a href="Top-Features-to-Look-When-Buying-Industrial-Fans" class="enitre_mouse">
+                    <h6><a href="Top-Features-to-Look-When-Buying-Industrial-Fans" class="enitre_mouse">Top Features to Look for When Buying Industrial Fans in 2025</a></h6>            
+            </div>
+
  <div class="container" id="blogContainer">
          <div class="row">
             <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
