--- a/sitemap.html
+++ b/sitemap.html
@@ -173,6 +173,9 @@
         <li><a href="blog">●&nbsp;Blogs</a></li>
 
         <li>
+          <a href="Top-Features-to-Look-When-Buying-Industrial-Fans">&emsp;-&nbsp;Top Features to Look for When Buying Industrial Fans in 2025</a>
+        </li>
+        <li>
           <a href="How-Centrifugal-Blowers-Reducing-Energy-Costs">&emsp;-&nbsp;How High-Efficiency Centrifugal Blowers Are Reducing Energy Costs in 2025</a>
         </li>
         <li>
