october new blog added

--- a/sitemap.html
+++ b/sitemap.html
@@ -173,6 +173,9 @@
         <li><a href="blog">●&nbsp;Blogs</a></li>
 
         <li>
+          <a href="role-of-industrial-fans-in-indoor-air-quality-and-Health">&emsp;-&nbsp;The Role of Industrial Fans in Indoor Air Quality & Worker Health</a>
+        </li>
+        <li>
           <a href="Top-Features-to-Look-When-Buying-Industrial-Fans">&emsp;-&nbsp;Top Features to Look for When Buying Industrial Fans in 2025</a>
         </li>
         <li>
