--- a/blog.html
+++ b/blog.html
@@ -153,6 +153,30 @@
         </div>
     </div>
 
+<div class="container" id="blogContainer">
+         <div class="row">
+            <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
+                <a href="role-of-industrial-fans-in-indoor-air-quality-and-Health" class="enitre_mouse">
+                    <div class="shadow_effect effect-apollo">
+                        <img src="images/blogs/industrial-fan-small-img.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
+                    </div>
+                </a>
+                <div class="yellow-strip">
+                    <div class="news-time">
+                        <h5>02</h5>
+                        <span>October
+                        </span>
+                    </div>
+                    <ul class="admin alfa_ul_style">
+                        <li>By : Admin</li>
+                        <li>Comments :34 </li>
+                    </ul>
+                </div>
+                <a href="role-of-industrial-fans-in-indoor-air-quality-and-Health" class="enitre_mouse">
+                <a href="role-of-industrial-fans-in-indoor-air-quality-and-Health" class="enitre_mouse">
+                    <h6><a href="role-of-industrial-fans-in-indoor-air-quality-and-Health" class="enitre_mouse">The Role of Industrial Fans in Indoor Air Quality & Worker Health</a></h6>            
+            </div>
+
     <div class="container" id="blogContainer">
          <div class="row">
             <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
