October 2nd blog

--- a/sitemap.html
+++ b/sitemap.html
@@ -171,7 +171,9 @@
         <li><a href="Centrifugal-Blowers">&emsp;-&nbsp;Centrifugal blowers</a></li>
         <li><a href="domestic-fan">&emsp;-&nbsp;Domestic fans</a></li>
         <li><a href="blog">●&nbsp;Blogs</a></li>
-
+        <li>
+          <a href="standard-vs-heavy-duty-exhaust-fans">&emsp;-&nbsp;Standard vs Heavy-Duty Exhaust Fans: Which One Is Right for You?</a>
+        </li>
         <li>
           <a href="role-of-industrial-fans-in-indoor-air-quality-and-Health">&emsp;-&nbsp;The Role of Industrial Fans in Indoor Air Quality & Worker Health</a>
         </li>
