FAQ's section added

--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@ Check out our website to know more or contact us now.
 
     <!-- FAQ END -->
     <!--=========Recent Project end============-->
-    <!--=========Get In Touch Started============-->
+    <!--=========Get In Touch Started============--
     <section class="pad95-10-top-bottom get_in_02">
         <div class="container">
             
