--- a/role-of-industrial-fans-in-indoor-air-quality-and-Health.html
+++ b/role-of-industrial-fans-in-indoor-air-quality-and-Health.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DJ720SRESV"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
@@ -215,7 +217,7 @@
 
                         <br><br><br>
 
-                        <h3 style="font-size: 19px; margin-bottom: 11px;">Benefits for Worker Health</h3>
+                    <h3 style="font-size: 19px; margin-bottom: 11px;">Benefits for Worker Health</h3>
                         <ul class="nw1">
                             <li>Reduced Respiratory Problems: Lower exposure to dust and pollutants.</li>
                             <li>Better Thermal Comfort: Fans help prevent heat-related illnesses.</li>
@@ -225,7 +227,7 @@
 
                         <br><br><br>
 
-                        <h3 style="font-size: 19px; margin-bottom: 11px;">Future of Industrial Ventilation</h3>
+                        <br><br><br> <h3 style="font-size: 19px; margin-bottom: 11px;">Future of Industrial Ventilation</h3>
                         <p class="pra">
                             The future of industrial fans lies in smart technology and sustainability:
                         </p>
@@ -237,7 +239,7 @@
 
                         <br><br><br>
 
-                        <h3 style="font-size: 19px; margin-bottom: 11px;">Conclusion</h3>
+                       <br><br><br> <h3 style="font-size: 19px; margin-bottom: 11px;">Conclusion</h3>
                         <p class="pra">
                             Maintaining indoor air quality is not just about compliance, it's about protecting your workforce, improving productivity, and ensuring long-term sustainability.
                         </p>
@@ -248,39 +250,85 @@
                             Talk to our team to find the right fan solution—from HVLS to heavy-duty exhaust fans—to optimize the air quality in your facility.
                         </p>
 
-                    <br><br><div class="shares-col">
+                    <!-- <br><br></r>
+                    <div class="shares-col">
                             <p>Shares</p>
                             <div class="header-socials">
                                 <a href="https://www.facebook.com/alfafans.in/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                                 <a href="https://instagram.com/alfafans.in?utm_source=ig_profile_share&igshid=1t6sodckdy4fg" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                 <a href="https://in.linkedin.com/company/alfa-engineering-co" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                             </div>
-                        </div>
-
-                        <div class="leave-reply-column">
-                            <h4>Leave a Reply</h4>
-                            <div class="row">
-                                <div class="col-md-6 form-field input-halfrght">
-                                    <input name="name" type="text" class="form-input" value="Full Name*">
-                                </div>
-                                <div class="col-md-6 form-field input-halflft">
-                                    <input name="name" type="text" class="form-input" value="Email*">
-                                </div>
-                                <div class="col-lg-12 col-md-12 form-field">
-                                    <textarea name="name" cols="1" rows="2" class="form-comment">Comment*</textarea>
-                                </div>
-                                <div class="col-md-12 form-field">
-                                    <input name="name" type="button" class="form-submit-btn" value="Post Comment">
+                        </div> -->
+ <!-- FAQ -->
+   <br><br><br>
+   <section class="">
+    <div class="container">
+        <div class="row">
+            <!-- Servie Right end -->
+        </div>
+                                <h3 style="font-size: 19px; margin-bottom: 11px;">Frequently Asked Questions</h3>
+        <div class="service-detail" style="margin-bottom: 30px;">
+            <div class="choose_Accordian_Wdt">
+                <div class="accordion-first clearfix acord_mar_non">
+                    <div class="accordion" id="accordion2">
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+                                    <em class="icon-fixed-width fa fa-plus"></em>
+                                   How do Alfa Fans improve indoor air quality?
+                                </a>
+                            </div>
+                            <div id="collapseOne" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                  Alfa Fans remove dust, fumes, and contaminants while circulating fresh air, keeping industrial workplaces safe, healthy, and compliant with safety standards.
                                 </div>
                             </div>
                         </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+                                    <em class="icon-fixed-width fa fa-plus"></em> What are the benefits of HVLS fans for worker health?
+                                </a>
+                            </div>
+                            <div id="collapseTwo" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    HVLS fans regulate temperature and humidity, reduce heat stress, improve thermal comfort, and boost productivity.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
+                                    <em class="icon-fixed-width fa fa-plus"></em> What makes Alfa Fans’ industrial fans future-ready?
+                                </a>
+                            </div>
+                            <div id="collapseThree" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                   Alfa Fans uses smart, energy-efficient, and eco-friendly technology, including IoT monitoring and VFD motors, for sustainable and efficient ventilation.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
+                                    <em class="icon-fixed-width fa fa-plus"></em> Are there energy-efficient industrial fans for better air quality??
+                                </a>
+                            </div>
+                            <div id="collapseFour" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Modern fans use IoT-enabled controls, energy-efficient motors, and VFDs to optimize airflow while reducing energy consumption.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
                     </div>
                 </div>
                 </div>
         </div>
     </section>
-
     <footer>
         <div class="yellow-background solution-available text-center">
             <div class="container">
