--- a/standard-vs-heavy-duty-exhaust-fans.html
+++ b/standard-vs-heavy-duty-exhaust-fans.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DJ720SRESV"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
@@ -325,39 +327,90 @@
                             By understanding these differences, you can ensure efficient airflow, enhanced air quality, and long-term performance in any environment.
                         </p>
 
-                        <br><br><div class="shares-col">
+                       <!-- <br><br></r>
                             <p>Shares</p>
                             <div class="header-socials">
                                 <a href="https://www.facebook.com/alfafans.in/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                                 <a href="https://instagram.com/alfafans.in?utm_source=ig_profile_share&igshid=1t6sodckdy4fg" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                 <a href="https://in.linkedin.com/company/alfa-engineering-co" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                             </div>
-                        </div>
-
-                        <div class="leave-reply-column">
-                            <h4>Leave a Reply</h4>
-                            <div class="row">
-                                <div class="col-md-6 form-field input-halfrght">
-                                    <input name="name" type="text" class="form-input" value="Full Name*">
-                                </div>
-                                <div class="col-md-6 form-field input-halflft">
-                                    <input name="name" type="text" class="form-input" value="Email*">
-                                </div>
-                                <div class="col-lg-12 col-md-12 form-field">
-                                    <textarea name="name" cols="1" rows="2" class="form-comment">Comment*</textarea>
-                                </div>
-                                <div class="col-md-12 form-field">
-                                    <input name="name" type="button" class="form-submit-btn" value="Post Comment">
-                                </div>
-                            </div>
-                        </div>
+                        </div> -->
 
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+        <!-- FAQ start -->
+           <br><br>
+    <div class="container">
+        <div class="row">
+            <!-- Servie Right end -->
+        </div>
+                                <h3 style="font-size: 19px; margin-bottom: 11px;">Frequently Asked Questions</h3>
+        <div class="service-detail" style="margin-bottom: 30px;">
+            <div class="choose_Accordian_Wdt">
+                <div class="accordion-first clearfix acord_mar_non">
+                    <div class="accordion" id="accordion2">
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+                                    <em class="icon-fixed-width fa fa-plus"></em>
+                                    What is the difference between standard and heavy-duty exhaust fans?
+                                </a>
+                            </div>
+                            <div id="collapseOne" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Standard exhaust fans are suited for small spaces like bathrooms and kitchens, offering moderate airflow and low noise. Heavy-duty fans are built for industrial and large commercial areas, providing high airflow, durability, and the ability to handle heat, smoke, and fumes.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+                                    <em class="icon-fixed-width fa fa-plus"></em> When should I choose a heavy-duty exhaust fan from Alfa Fans?
 
+                                </a>
+                            </div>
+                            <div id="collapseTwo" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Heavy-duty fans are ideal for factories, warehouses, workshops, and commercial kitchens where continuous operation, high airflow, and industrial-strength durability are required.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
+                                    <em class="icon-fixed-width fa fa-plus"></em> Are standard exhaust fans energy-efficient?
+                                </a>
+                            </div>
+                            <div id="collapseThree" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Yes. Alfa Fans’ standard exhaust fans are designed for small to medium spaces, providing efficient ventilation with lower energy consumption and minimal maintenance.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
+                                    <em class="icon-fixed-width fa fa-plus"></em> Can Alfa Fans’ heavy-duty exhaust fans be installed in multiple ways?
+                                </a>
+                            </div>
+                            <div id="collapseFour" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Absolutely. They can be wall-mounted, roof-mounted, or used in inline duct systems, offering flexibility for large or complex industrial and commercial spaces.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+                    </div>
+                </div>
+                </div>
+        </div>
+    </section>
+        <!-- FAQ end -->
     <footer>
         <div class="yellow-background solution-available text-center">
             <div class="container">
