--- a/Top-Features-to-Look-When-Buying-Industrial-Fans.html
+++ b/Top-Features-to-Look-When-Buying-Industrial-Fans.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DJ720SRESV"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -326,36 +328,73 @@
                             <br><br><a href="https://www.alfafans.com/"></a>
                         </p>
 
-                        <div class="shares-col">
-                            <p>Shares</p>
-                            <div class="header-socials">
-                                <a href="https://www.facebook.com/alfafans.in/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                <a href="https://instagram.com/alfafans.in?utm_source=ig_profile_share&igshid=1t6sodckdy4fg" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                                <a href="https://in.linkedin.com/company/alfa-engineering-co" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+              <br><br>
+    <div class="container">
+        <div class="row">
+            <!-- Servie Right end -->
+        </div>
+                                <h3 style="font-size: 19px; margin-bottom: 11px;">Frequently Asked Questions</h3>
+        <div class="service-detail" style="margin-bottom: 30px;">
+            <div class="choose_Accordian_Wdt">
+                <div class="accordion-first clearfix acord_mar_non">
+                    <div class="accordion" id="accordion2">
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+                                    <em class="icon-fixed-width fa fa-plus"></em>
+                                    What are the most energy-efficient industrial fans in 2025?
+                                </a>
                             </div>
-                        </div>
-
-                        <div class="leave-reply-column">
-                            <h4>Leave a Reply</h4>
-                            <div class="row">
-                                <div class="col-md-6 form-field input-halfrght">
-                                    <input name="name" type="text" class="form-input" value="Full Name*">
-                                </div>
-                                <div class="col-md-6 form-field input-halflft">
-                                    <input name="name" type="text" class="form-input" value="Email*">
-                                </div>
-                                <div class="col-lg-12 col-md-12 form-field">
-                                    <textarea name="name" cols="1" rows="2" class="form-comment">Comment*</textarea>
-                                </div>
-                                <div class="col-md-12 form-field">
-                                    <input name="name" type="button" class="form-submit-btn" value="Post Comment">
+                            <div id="collapseOne" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Look for fans with high-efficiency motors, VFDs, and Energy Star ratings—they can cut energy use by up to 40%.
                                 </div>
                             </div>
                         </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+                                    <em class="icon-fixed-width fa fa-plus"></em> How do smart industrial fans improve workplace efficiency?
 
+                                </a>
+                            </div>
+                            <div id="collapseTwo" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Smart fans adjust speed automatically, offer remote monitoring, predictive maintenance alerts, and integrate with HVAC systems.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
+                                    <em class="icon-fixed-width fa fa-plus"></em> What should I consider when choosing industrial fans for large facilities?
+                                </a>
+                            </div>
+                            <div id="collapseThree" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Focus on airflow (CFM), HVLS fans for large spaces, low noise, durability, safety, and easy maintenance.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
+                                    <em class="icon-fixed-width fa fa-plus"></em> Are there industrial fans that meet sustainability and safety standards?
+                                </a>
+                            </div>
+                            <div id="collapseFour" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Yes—many fans are LEED or ISO-certified and feature protective guards, automatic shut-off, and fire-resistant materials.
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+
+                    </div>
+                </div>
+                </div>
         </div>
     </section>
 
