october month 3rd blog

--- a/blog.html
+++ b/blog.html
@@ -156,6 +156,30 @@
     <div class="container" id="blogContainer">
          <div class="row">
             <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
+                <a href="hvls-fans-vs-conventional-industrial-fans" class="enitre_mouse">
+                    <div class="shadow_effect effect-apollo">
+                        <img src="images/blogs/HVLS-vs-conventional-industrial-fans-small-img.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
+                    </div>
+                </a>
+                <div class="yellow-strip">
+                    <div class="news-time">
+                        <h5>21</h5>
+                        <span>October
+                        </span>
+                    </div>
+                    <ul class="admin alfa_ul_style">
+                        <li>By : Admin</li>
+                        <li>Comments :34 </li>
+                    </ul>
+                </div>
+                <a href="hvls-fans-vs-conventional-industrial-fans" class="enitre_mouse">
+                    <h6><a href="hvls-fans-vs-conventional-industrial-fans" class="enitre_mouse">HVLS Fans vs Conventional Industrial Fans: Which Is Better for You?</a></h6>
+                </a>
+            </div>
+
+    <div class="container" id="blogContainer">
+         <div class="row">
+            <div class="col-md-4 col-sm-4 col-xs-12 news-column ">
                 <a href="standard-vs-heavy-duty-exhaust-fans" class="enitre_mouse">
                     <div class="shadow_effect effect-apollo">
                         <img src="images/blogs/havey-vs-standard-exhaust-fan-small-img.png" class="img-responsive zoom_img_effect" alt="Best Industrial Fan Suppliers" title="Best HVLS Industrial Fan Solutions In India">
