--- a/sitemap.html
+++ b/sitemap.html
@@ -172,6 +172,9 @@
         <li><a href="domestic-fan">&emsp;-&nbsp;Domestic fans</a></li>
         <li><a href="blog">●&nbsp;Blogs</a></li>
         <li>
+          <a href="hvls-fans-vs-conventional-industrial-fans">&emsp;-&nbsp;HVLS Fans vs Conventional Industrial Fans: Which Is Better for You?</a>
+        </li>
+        <li>
           <a href="standard-vs-heavy-duty-exhaust-fans">&emsp;-&nbsp;Standard vs Heavy-Duty Exhaust Fans: Which One Is Right for You?</a>
         </li>
         <li>
